noinst_LIBRARIES = libml.a

libml_a_FFLAGS = -Mdalign -Msave

libml_a_SOURCES = atm2d_init_fixed.F \
	atm2d_init_vars.F \
	daily_for_ocean.F \
	driver_IGSM22.F \
	flux_atm2ocean.F \
	forward_step_atm2d.F \
	ground_ocean.F \
	init_ocean.F \
	mlocean.F \
	ocean_ml.F \
	odifsn_2d.F \
	ostruc_2d.F \
	qflux.F \
	qflux_rel.F \
	wrrstrt_ocean.F 
