noinst_LIBRARIES = libtem.a

libtem_a_CXXFLAGS = -O2

libtem_a_SOURCES = elmnt437.cpp \
	kclimate2tem44c.cxx \
	landareadat44c.cpp \
	latdat437.cpp \
	lulcchrtdat44c.cpp \
	lulcdat44a.cpp \
	mdmigsm44c.cpp \
	mdmsoiligsm44c.cpp \
	methanogenigsm44c.cpp \
	methanotrophigsm44c.cpp \
	mitatms44c.cpp \
	mitclm44c.cpp \
	mitclmdata44c.cpp \
	mitdata44c.cpp \
	mitdaychrtdata44c.cpp \
	mitdayclmdata44c.cpp \
	mitelm44c.cpp \
	mithrclmdata44c.cpp \
	mitmcrb44c.cpp \
	mitsoil44c.cpp \
	mitsoldat44c.cpp \
	mitsolyrdat44c.cpp \
	mittem44c.cpp \
	nem44c.cpp \
	o3data44c.cpp \
	regmittem44c.cpp \
	telvdat437.cpp \
	tigsmatms44c.cpp \
	tigsmbiome44c.cpp \
	tigsmclm44c.cpp \
	tigsmclmdat44c.cpp \
	tigsmhumnact44c.cpp \
	tigsmlcluc44c.cpp \
	tigsmprocessXML44c.cpp \
	tigsmsoil44c.cpp \
	tigsmtemdat44c.cpp \
	tigsmveg44c.cpp \
	tmaxcohortdat437.cpp \
	tsoldat437.cpp
