noinst_LIBRARIES = libtem.a

libtem_a_CXXFLAGS = -O2

## Source files
libtem_a_SOURCES = \
	kclimate2tem44d1.cxx \
	elmnt437.cpp		  mitclm44d1.cpp	  mitsolyrdat44d1.cpp	tigsmlcluc44d1.cpp \
	landareadat44c1.cpp	  mitclmdata44d1.cpp	  mittem44d1.cpp	tigsmprocessXML44d1.cpp \
	latdat437.cpp		  mitdata44d1.cpp	  nem44d1.cpp		tigsmsoil44d1.cpp \
	lulcchrtdat44c1.cpp	  mitdaychrtdata44d1.cpp  o3data44d1.cpp	tigsmtemdat44d1.cpp \
	lulcdat44a.cpp		  mitdayclmdata44d1.cpp   regmittem44d1.cpp	tigsmveg44d1.cpp \
	mdmigsm44d1.cpp		  mitelm44d1.cpp	  tigsmatms44d1.cpp	tmaxcohortdat437.cpp \
	mdmsoiligsm44d1.cpp	  mithrclmdata44d1.cpp	  tigsmbiome44d1.cpp	tsoldat437.cpp \
	methanogenigsm44d1.cpp	  mitmcrb44d1.cpp	  tigsmclm44d1.cpp \
	methanotrophigsm44d1.cpp  mitsoil44d1.cpp	  tigsmclmdat44d1.cpp \
	mitatms44d1.cpp		  mitsoldat44d1.cpp	  tigsmhumnact44d1.cpp 
