noinst_LIBRARIES = libtem.a
libtem_a_SOURCES = atms437.cpp \
	elmnt437.cpp \
	humnact438.cpp \
	kclimate2tem438.cpp \
	latdat437.cpp \
	lulcdat437.cpp \
	mdm51.cpp \
	mdmsoil51.cpp \
	methanogen51.cpp \
	methanotroph51.cpp \
	mitatms437.cpp \
	mitclm437.cpp \
	mitclmdata437.cpp \
	mitdata437.cpp \
	mitdaychrtdata437.cpp \
	mitdayclmdata437.cpp \
	mitelm438.cpp \
	mithrclmdata437.cpp \
	mitmcrb437.cpp \
	mitsoil437.cpp \
	mitsoldat437.cpp \
	mitsolyrdat437.cpp \
	mittem438.cpp \
	nem437.cpp \
	o3data437.cpp \
	regmittem438.cpp \
	tbiome437.cpp \
	tclm437.cpp \
	tclmdat437.cpp \
	telvdat437.cpp \
	tlcluc437.cpp \
	tmaxcohortdat437.cpp \
	tprocessXML437.cpp \
	tsoil437.cpp \
	tsoldat437.cpp \
	ttemdat437.cpp \
	tveg438.cpp

