noinst_LIBRARIES = libtem.a
libtem_a_SOURCES = elmnt437.cpp \
	kclimate2tem44b.cxx \
	latdat437.cpp \
	lulcdat44a.cpp \
	mdmigsm44a.cpp \
	mdmsoiligsm44a.cpp \
	methanogenigsm44a.cpp \
	methanotrophigsm44a.cpp \
	mitatms44a.cpp \
	mitclm44a.cpp \
	mitclmdata44a.cpp \
	mitdata44a.cpp \
	mitdaychrtdata44a.cpp \
	mitdayclmdata44a.cpp \
	mitelm44b.cpp \
	mithrclmdata44a.cpp \
	mitmcrb44a.cpp \
	mitsoil44a.cpp \
	mitsoldat44a.cpp \
	mitsolyrdat44a.cpp \
	mittem44b.cpp \
	nem44a.cpp \
	o3data44a.cpp \
	regmittem44b.cpp \
	telvdat437.cpp \
	tigsmatms44a.cpp \
	tigsmbiome44a.cpp \
	tigsmclm44a.cpp \
	tigsmclmdat44a.cpp \
	tigsmhumnact44b.cpp \
	tigsmlcluc44a.cpp \
	tigsmprocessXML44a.cpp \
	tigsmsoil44a.cpp \
	tigsmtemdat44a.cpp \
	tigsmveg44b.cpp \
	tmaxcohortdat437.cpp \
	tsoldat437.cpp
